--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
 /* start navigation */ 
 
-.header_area .main-menu .navbar .navbar-brand{
+/*.header_area .main-menu .navbar .navbar-brand{
     padding: 0 2rem 0 5rem;
 }
 
@@ -38,20 +38,43 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-}
+}*/
 
 
 /* end navigation */ 
 
-/* Banner Area */ 
+/* Presentation Area */ 
+.site-main .header-container{
+	width: 100%;
+    max-width: 1920px;
+    margin-top: 30vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
 
-/*.site-main .site-banner {
-    background: url(../img/banner/home-banner.png) no-repeat 0% 50%;
-}*/
+.site-main .header-container .header-wrapper{
+	width: 90%;
+	box-sizing: border-box;
+    font-family: Manrope,sans-serif;
+}
 
-.site-main .site-banner .site-title h3{
-    padding-top: 35%;
-    font-weight: 500;
+.site-main .header-container .header-title{
+    font-size: 5.5rem;
+	margin: 0;
+	padding: 0;
+	overlow: hidden;
+}
+
+.site-main .header-container .split-line{
+	margin: 0;
+	padding: 0;
+}
+
+.site-main .header-container .title{
+    margin: 0;
+    line-height: 150px;
 }
 
 /*.site-main .site-banner .site-title h3::after{
@@ -69,7 +92,7 @@
 }
 
 .site-main .site-banner .site-title h4{
-    font-size: 1.5rem;
+
 }
 
 .site-main .site-banner .banner-image > img{
