--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,16 @@
     line-height: 150px;
 }
 
+.site-main .header-container .title h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
 /*.site-main .site-banner .site-title h3::after{
     content: " ";
     height: 2px;
