--- a/css/style.css
+++ b/css/style.css
@@ -39,21 +39,10 @@
 	padding: 0;
 }
 
-.site-main .header-container .title{
+.site-main .header-container .header-title .title{
     margin: 0;
     line-height: 150px;
 	color:#e7b087;
-}
-
-.site-main .header-container .title h1 {
-    display: block;
-    font-size: 2em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-	color: #e7b087;
 }
 
 .site-main .header-container .title-text{
